--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -65,7 +65,6 @@
         <item name="android:layout_gravity">end|center_vertical</item>
         <item name="android:src">@drawable/baseline_clear_24</item>
         <item name="android:background">@color/white</item>
-
     </style>
 
     <style name="SwitchTextAppearance">
@@ -130,6 +129,46 @@
     </style>
 
 
+    <style name="AudioPlayerTrackDescription">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:paddingVertical">8dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
 
+    <style name="AudioPlayerTrackValue">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="BackImageButtonStyle">
+        <item name="srcCompat">@drawable/baseline_arrow_back_24_night</item>
+    </style>
+
+    <style name="ChoosenTrackNameStyle">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="PlayButtonStyle">
+        <item name="srcCompat">@drawable/play_dark</item>
+        <item name="android:background">@color/black</item>
+    </style>
+
+    <style name="QuequeButtonStyle">
+        <item name="srcCompat">@drawable/queque_dark</item>
+        <item name="android:background">@color/black</item>
+    </style>
+
+    <style name="FavouriteButtonStyle">
+        <item name="srcCompat">@drawable/favourite_dark</item>
+        <item name="android:background">@color/black</item>
+    </style>
 
 </resources>
