--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,6 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
         <item name="navigationIcon">@drawable/baseline_arrow_back_24</item>
-
     </style>
 
     <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -60,7 +59,6 @@
         <item name="android:textFontWeight">400</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textCursorDrawable">@drawable/cursor_custom</item>
-
     </style>
 
     <style name="ClearIconStyle">
@@ -108,11 +106,11 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textFontWeight">400</item>
     </style>
-    
+
     <style name="ImageErrorStyle">
         <item name="android:src">@drawable/error_light_mode</item>
     </style>
-    
+
     <style name="ButtonUpdateStyle">
         <item name="android:backgroundTint">@color/black</item>
         <item name="android:text">@string/button_update</item>
@@ -122,7 +120,7 @@
         <item name="android:textFontWeight">500</item>
         <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">54dp</item>
-</style>
+    </style>
 
     <style name="SearchHistoryTextStyle">
         <item name="android:text">@string/search_history_text</item>
@@ -132,5 +130,47 @@
         <item name="android:textFontWeight">500</item>
     </style>
 
+
+    <style name="AudioPlayerTrackDescription">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:paddingVertical">8dp</item>co
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="AudioPlayerTrackValue">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="BackImageButtonStyle">
+        <item name="srcCompat">@drawable/baseline_arrow_back_24</item>
+    </style>
+
+    <style name="ChoosenTrackNameStyle">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="PlayButtonStyle">
+        <item name="srcCompat">@drawable/play_button</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="QuequeButtonStyle">
+        <item name="srcCompat">@drawable/queque_button</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="FavouriteButtonStyle">
+        <item name="srcCompat">@drawable/favourite_light</item>
+        <item name="android:background">@color/white</item>
+    </style>
 
 </resources>
