--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -138,7 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            tools:text="0:30"
+            android:text="0:00"
             android:textFontWeight="500"
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
