--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -39,6 +39,14 @@
 
     </FrameLayout>
 
+    <ProgressBar android:id="@+id/progressBar"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="136dp"
+        android:indeterminateTint="@color/blue"
+        android:visibility="gone"/>
+
     <!-- Список треков -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/track_list"
